--- a/Methods/ISFC.tex
+++ b/Methods/ISFC.tex
@@ -17,61 +17,58 @@
 \newcommand{\tr}{tr}
 
 \begin{document}
-\subsection{Introduction}
-Human beings have an insatiable desire to understand, not only the things around us, but also ourselves. Why do we behave and respond the way we do \cite{hasson2012}? How do we learn and adapt \cite{hasson2004}\cite{hasson2005}? What do we believe or value \cite{Greene01}? These questions have mesmerized wise men for thousands of years, and the answers continue to evade us. For many of us, the key to all the secrets about ourselves is our brain, the central hub of all our thoughts and decision making. So, when a new technology emerged allowing us to study the brain in a quantitative manner, it opened countless doors of opportunities for those who possessed an aptitude for quantitative analysis and a hunger to learn more about our own identity.\\
+\section{Introduction}
+Human beings have an insatiable desire to understand, not only the things around us, but also ourselves. Why do we behave and respond the way we do \cite{hasson2012}? How do we learn and adapt \cite{hasson2004}\cite{hasson2005}? What do we believe or value \cite{Greene01}? These questions have mesmerized wise men for thousands of years, and the answers continue to evade us. For many of us, the key to all the secrets about ourselves is our brain, the central hub of all our thoughts and decision making. So, when a new technology emerged allowing us to study the brain in a quantitative manner, it opened countless doors of opportunities for those who possessed an aptitude for quantitative analysis and a hunger to learn more about our own identity.
 
-Functional Magnetic Resonance Imaging, often referred to as fMRI, was first discovered and applied as a brain mapping method in 1990 by Seiji Ogawa \cite{Ogawa90}. Since then, this technology quickly popularized among Brain Science related research due to its unprecedented low health risk to subjects and its ability to accurately translate brain activities into highly-structured data \cite{Logothetis01}. Once the the highly abstract brain activities are converted into signs and digits, decoding patterns in the brain becomes a possibility. By treating each fMRI brain image as a feature vector, machine learning algorithms trained on a subset of the images may be used to distinguish cognitive information (e.g. which part of a movie someone is watching) from the held-out images \cite{Norman06}\cite{peterson12}\cite{peterson17}. These approaches typically treat each brain image in isolation, and attempt to identify patterns of activity associated with each of several candidate brain states. However, measurements from fMRI are often corrupted by noises created by the environment, human error, random neural activity, etc \cite{peterson11}. To address this issue, new branches of research has been emerging that specifically focuses on the extraction of useful information from noisy brain fMRI data by treating the brain images as a dynamic time series, and one of the most fruitful branches is functional connectivity \cite{peterson9} \cite{peterson19} \cite{peterson20}.\\
+Functional Magnetic Resonance Imaging, often referred to as fMRI, was first discovered and applied as a brain mapping method in 1990 by Seiji Ogawa \cite{Ogawa90}. Since then, this technology quickly popularized among Brain Science related research due to its unprecedented low health risk to subjects and its ability to accurately translate brain activities into highly-structured data \cite{Logothetis01}. Once the the highly abstract brain activities are converted into signs and digits, decoding patterns in the brain becomes a possibility. By treating each fMRI brain image as a feature vector, machine learning algorithms trained on a subset of the images may be used to distinguish cognitive information (e.g. which part of a movie someone is watching) from the held-out images \cite{Norman06}\cite{peterson12}\cite{peterson17}. These approaches typically treat each brain image in isolation, and attempt to identify patterns of activity associated with each of several candidate brain states. However, measurements from fMRI are often corrupted by noises created by the environment, human error, random neural activity, etc \cite{peterson11}. To address this issue, new branches of research has been emerging that specifically focuses on the extraction of useful information from noisy brain fMRI data by treating the brain images as a dynamic time series, and one of the most fruitful branches is functional connectivity \cite{peterson9} \cite{peterson19} \cite{peterson20}.
 
-Functional connectivity analyses entail computing the correlations between the time series of activations each pair of brain regions exhibits. When we observe the brain, the neural activities can appear incredibly complex. But mechanics of brain are far from random: rather, the dynamic patterns of activity our brains exhibit are highly structured. Presumably this mirrors the complex but highly structured nature of our internal thoughts and experiences. Recently, it has become clear that important cognitive information is contained in higher-order brain patterns, such as the dynamic correlational structure of the data \cite{davidson2016}. When applying functional connectivity analyses on one subject in isolation, one can examine how (or whether) the correlational structure of these activity patterns (across a given set of brain regions) varies according to the cognitive task an experimental subject is performing \cite{Turke13}\cite{Rubinov2010}{peterson10}. Alternatively, the inter-subject functional correlation (ISFC) analyses applies functionally connectivity analyses across multiple subjects to isolate stimulus-dependent inter-regional correlations from intrinsic neural processes and non-neuronal noise \cite{hasson2016}\cite{jeremy2017}.\\
+Functional connectivity analyses entail computing the correlations between the time series of activations each pair of brain regions exhibits. When we observe the brain, the neural activities can appear incredibly complex. But mechanics of brain are far from random: rather, the dynamic patterns of activity our brains exhibit are highly structured. Presumably this mirrors the complex but highly structured nature of our internal thoughts and experiences. Recently, it has become clear that important cognitive information is contained in higher-order brain patterns, such as the dynamic correlational structure of the data \cite{davidson2016}. When applying functional connectivity analyses on one subject in isolation, one can examine how (or whether) the correlational structure of these activity patterns (across a given set of brain regions) varies according to the cognitive task an experimental subject is performing \cite{Turke13}\cite{Rubinov2010}{peterson10}. Alternatively, the inter-subject functional correlation (ISFC) analyses applies functionally connectivity analyses across multiple subjects to isolate stimulus-dependent inter-regional correlations from intrinsic neural processes and non-neuronal noise \cite{hasson2016}\cite{jeremy2017}.
 
-Over the past decade, functional connectivity analyses of brain data has evolved significantly \cite{olaf2005}\cite{khambhati2017}. However, there are three fundamental limitations to past approaches:\\
+Over the past decade, functional connectivity analyses of brain data has evolved significantly \cite{olaf2005}\cite{khambhati2017}. However, there are three fundamental limitations to past approaches:
+
 \begin{enumerate}
 \item	\textbf{Correlation matrices are not scalable.} Examining pairwise correlation in brain data
-produces a correlation matrix with O(n2) entries (where n is the number of brain regions). When n is large (e.g. the number of voxels in an fMRI volume), the full correlation matrix can become unwieldy to compute with \cite{Rubinov2010}\cite{Betzel2017}\cite{Craddock2012}\cite{Yeo2011}. Furthermore, if one wishes to examine higher-order patterns (e.g. how correlations between correlations change over time), the storage requirements of the resulting patterns increase exponentially.
+produces a correlation matrix with O(n2) entries (where n is the number of brain regions). When n is large (e.g. the number of brain regions in an fMRI volume), the full correlation matrix can become unwieldy to compute with \cite{Rubinov2010}\cite{Betzel2017}\cite{Craddock2012}\cite{Yeo2011}. Furthermore, if one wishes to examine higher-order patterns (e.g. how correlations between correlations change over time), the storage requirements of the resulting patterns increase exponentially.
 
-\item \textbf{The sliding window approach is not well suited to studying dynamic activity.} Most approaches to calculating functional connectivity uses the sliding window method, where a window of set time length is selected to calculate the functional connectivity at one time point before the window is shift forward for following calculations \cite{enrico2011}\cite{elena2012}. One disadvantage of the sliding window approach is the loss of information for a number of time points equal to half of the sliding window length. Although many practical applications use buffers to make up for the loss, repeated application of the sliding window approach on the same dataset—--e.g. calculating the correlation of the correlation between nodes—--is impractical. In addition, the sliding window approach provides only a poor approximation of the moment-by-moment patterns at the heart of these representations.\\
+\item \textbf{The sliding window approach is not well suited to studying dynamic activity.} Most approaches to calculating functional connectivity uses the sliding window method, where a window of set time length is selected to calculate the functional connectivity at one time point before the window is shift forward for following calculations \cite{enrico2011}\cite{elena2012}. One disadvantage of the sliding window approach is the loss of information for a number of time points equal to the sliding window length. Although many practical applications use buffers to make up for the loss, repeated application of the sliding window approach on the same dataset—--e.g. calculating the correlation of the correlation between nodes—--is impractical. In addition, the sliding window approach provides only a poor approximation of the moment-by-moment patterns at the heart of these representations.
 
 \item \textbf{Only using node activations and first level dynamic patterns may not be enough.} The brain is a network of seemingly autonomous nodes that are actually intricately interconnected. Useful information about the brain may exist within interactions between interactions between nodes (2nd order), interactions between interactions between interactions (3rd order), or in even higher order dynamics. To fully grasp the functions of a single node in the network, it is crucial to understand of its activities relative to the richly woven network that supports it. Therefore, incorporating information from higher order dynamics could potentially improve the quality of brain analysis.
 
 \end{enumerate}
 
-First, to find an effective replacement for the widely used sliding window method, we designed TimeCorr, an intuitive method that found inspiration directly from the fundamental correlation function. Like the sliding window method, TimeCorr is able is able to recover functional connectivity from fMRI brain images with similar if not higher accuracy. But TimeCorr goes beyond the sliding window method by (a) not requiring buffer at each end for calculation, thereby avoiding data loss, (b) offering extra stability by using all the time points in the time series for calculation of correlation at every time point, (c) provides the option to shift between locality and fluidity based on user demand by varying the resolution parameter.\\
+First, to find an effective replacement for the widely used sliding window method, we designed TimeCorr, an intuitive method that found inspiration directly from the fundamental correlation function. Like the sliding window method, TimeCorr is able is able to recover functional connectivity from fMRI brain images with similar if not higher accuracy. But TimeCorr goes beyond the sliding window method by (a) not requiring buffer at each end for calculation, thereby avoiding data loss, (b) offering extra stability by using all the time points in the time series for calculation of correlation at every time point, (c) provides the option to shift between locality and fluidity based on user demand by varying the resolution parameter.
 
-TimeCorr achieves all the above functions through the use of Gaussian distribution. By attaching a Gaussian coefficient to each time point component in the time series, TimeCorr is able to allocate the amount of influence each neighboring time point has on the calculation of correlation at the time point of interest. As the Gaussian center (highest density/coefficient) is always at the time point of interest, TimeCorr guarantees to return results that are highly proportional to the local ground truth. In addition, the user can choose to have more fluidity in overall results by choosing coefficients from a Gaussian distribution with a large variance; or higher resolution and more locality by choosing coefficients from a distribution with a smaller variance.\\
+TimeCorr achieves all the above functions through the use of Gaussian distribution. By attaching a Gaussian coefficient to each time point component in the time series, TimeCorr is able to allocate the amount of influence each neighboring time point has on the calculation of correlation at the time point of interest. As the Gaussian center (highest density/coefficient) is always at the time point of interest, TimeCorr guarantees to return results that are highly proportional to the local ground truth. In addition, the user can choose to have more fluidity in overall results by choosing coefficients from a Gaussian distribution with a large variance; or higher resolution and more locality by choosing coefficients from a distribution with a smaller variance.
 
-Second, we designed a "level up" method that applies TimeCorr, Inter-Subject Functional Connectivity (ISFC) and Principle Component Analysis (PCA) to calculate higher order functional connectivity. To overcome the problem of scaling and to enforce uniformity for inter-levels analysis, we use TimeCorr on each subject to calculate functional connectivity from previous level activations and then reduce the results to an arbitrary number of feature points to represent the activations for the next level. As TimeCorr avoids data loss in calculating functional connectivity and PCA maintains an uniform number of activations at each "level up", we are able to obtain $10^{th}$ order functional connectivity while ensuring linear scaling in storage and computation.\\
+Second, we designed a "level up" method that applies TimeCorr, Inter-Subject Functional Connectivity (ISFC) and Principle Component Analysis (PCA) to calculate higher order functional connectivity. To overcome the problem of scaling and to enforce uniformity for inter-levels analysis, we use TimeCorr on each subject to calculate functional connectivity from previous level activations and then reduce the results to an arbitrary number of feature points to represent the activations for the next level. As TimeCorr avoids data loss in calculating functional connectivity and PCA maintains an uniform number of activations at each "level up", we are able to obtain $10^{th}$ order functional connectivity while ensuring linear scaling in storage and computation.
 
-We believe that different orders of functional connectivity represents information on different aspects of brain dynamics, and incorporating knowledge of the higher-order structures of the brain will expand present brain decoding capabilities. To measure the amount of information present at each level, we introduce decoding accuracy, a testing parameter that describes the proportion of time points in one level of a subject's functional connectivity graph that has the highest correlation with the same time point from the average activations of all other subjects. We are interested in how decoding accuracy changes as we reach higher order functional connectivity. Although we presumed brain dynamics would converge as we get to higher orders and decoding accuracy would increase, reality proved otherwise. This is shown and discussed in more detail in the Intra-Level Decoding Analysis section of our results.\\
+We believe that different orders of functional connectivity represents information on different aspects of brain dynamics, and incorporating knowledge of the higher-order structures of the brain will expand present brain decoding capabilities. To measure the amount of information present at each level, we introduce decoding accuracy, a testing parameter that describes the proportion of time points in one level of a subject's functional connectivity graph that has the highest correlation with the same time point from the average activations of all other subjects. We are interested in how decoding accuracy changes as we reach higher order functional connectivity. Although we presumed brain dynamics would converge as we get to higher orders and decoding accuracy would increase, reality proved otherwise. This is shown and discussed in more detail in the Intra-Level Decoding Analysis section of our results.
 
-Finally, we present the High-Order Brain Dynamics (HOBD) model, a method that seeks to bring everything together. By finding an optimal mixture weight for each level, the HOBD is able to efficiently incorporate information from multiples orders of functional connectivity obtained using the "level up" approach above and achieve significantly higher decoding accuracy than any level alone. In the Multi-Level Mixture Analysis section of our results, we provide a side by side comparison to highlight the improvements HOBD achieved in its decoding capabilities.\\
-
-
-
-\begin{enumerate}
-\item Advantages of using the TimeCorr method
-\item The goal and focus of this project
-\begin{enumerate}
-\item Develop a general toolbox to help related research in inter-subject functional connectivity research
-\item Conduct analysis on datasets to understand the significance of higher levels in decoding datasets (Mixture Analysis)
-\end{enumerate}
-\end{enumerate}
+Finally, we present the High-Order Brain Dynamics (HOBD) model, a method that seeks to bring everything together. By finding an optimal mixture weight for each level, the HOBD is able to efficiently incorporate information from multiples orders of functional connectivity obtained using the "level up" approach above and achieve significantly higher decoding accuracy than any level alone. In the Multi-Level Mixture Analysis section of our results, we provide a side by side comparison to highlight the improvements HOBD achieved in its decoding capabilities.
 
 
+\section{Model Description}
 \subsection{Single Subject TimeCorr}
-Find method to find dynamic correlation without loss of data
+The TimeCorr method was designed for the purpose of replacing the sliding window method as a lossless alternative to calculating functional connectivity (the correlation structure between brain regions within a subject's brain) from brain fMRI data. The sliding window method operates by applying the correlation calculation function on a block of data centering on the time point of interest $t$ and spanning $L_w$ time points, where $L_w$ is the sliding window length and must be of considerable magnitude for the sliding window method to achieve respectable accuracy. However, due to its inherent design flaw, using the sliding window method on a dataset of time length $T$ could only yield functional connectivity for $T-L_w$ data points, a loss not insignificant due to the typical magnitude of $L_w$. Thus, as calculating high order functional connectivity involves repeatedly applying the method of correlation calculation on the dataset, using the sliding window method would result in rapid deterioration in the amount of usable data.
 
-Effectively utilize information from entire dataset to achieve higher accuracy
+To solve this problem, we designed the TimeCorr method, which finds inspiration from the fundamental correlation function. Instead of isolating a block of points for correlation calculation, TimeCorr effectively utilizes information from the entire dataset for functional connectivity calculation at every time point. To ensure locality of TimeCorr's results, every term is multiplied by a weight drawn from a normalized Gaussian density function so that each time point influences the calculation of functional connectivity at time point of interest $t$ proportional to its distance from $t$. This adaptation of the correlation function effectively eliminates results repetition at the beginning and end of the time series, thereby increasing the number of output time points to equal to the number of inputs and avoiding any data loss.
 
-Inspiration from the regular correlation function, but applies normalized Gaussian density function so that each time point influences the calculation of dynamic correlation at time point of interest proportional to its distance from the time point of interest.
+\large{\textbf{Formal Definition}}
 
-Given a single subject fRMI dataset with T time points and V voxels, the TimeCorr method is used to determine the temporal correlation between voxels at each time points. \\
+\normalsize
+Given a single subject fMRI dataset with T time points and N brain regions, to apply TimeCorr:
+
 \begin{enumerate}
-\item Choose variance V to represent the amount of influence neighboring time points will have on the calculation of the voxel correlation at each time point.\\
+\item Base on the amount of influence neighboring time points should have on the calculation of the functional connectivity at each time point, choose variance V for the Gaussian density function to generate coefficients.
+
 \item For each time point t:
 \begin{enumerate}
-\item Generate an array of Gaussian coefficients $w_t$ of length T and variance V with center at the $t^{th}$ element\\
-\item Element-wise multiply the time series of activations of every voxel $a_i$ with the Gaussian coefficients array to create weighted activations array for each voxel $S^i_t$\\
-\item Find the temporal dynamic correlation between voxel i and voxel j at time point t through the equation:
+\item Using a Gaussian density function of variance V and mean $t$, generate an array of coefficients $w_t$ of length T.
+
+\item For each brain region, element-wise multiply its activation time sequence $a_i$ by the coefficients array to create a weighted activations array $S^i_t$.
+
+\item Find the temporal correlation between brain region i and brain region j at time point t through the equation:
+
 \begin{align*}
 C(S^i_t,S^j_t) = \frac{1}{Z}\frac{\sum_{l=0}^T (S_l^i - \bar{S^i_t})\cdot(S^j_l - \bar{S^j_t})\cdot \mathcal{N}(l|t,\sigma)}{\sigma_{S_t^i} \cdot \sigma_{S_t^j}}
 \end{align*}
@@ -81,23 +78,36 @@ Z &= \sum_{l=0}^T \mathcal{N}(l|t,\sigma)\\
 \bar{S^i_t} &=\frac{1}{Z} \sum_{l=0}^T S^i_l \cdot \mathcal{N}(l|t,\sigma)\\
 \sigma_{S_t^i} &=\sqrt{ \frac{1}{Z}\sum_{l=0}^T (S_l^i-\bar{S_t^i})^2 \cdot \mathcal{N}(l|t,\sigma)}\\
 \end{align*}
-\item Repeat above process for every voxel pair to create correlation matrix for time point t
+\item Repeat above process for every pair of brain regions to create correlation matrix for time point t
+\item Convert the correlation matrix at every time point to its inverse squareform format, output an array of size $T$ by $(V^2-V)/2$ dimensional matrix, where $T$ and $V$ represent the time length and brain region count of the dataset.
 \end{enumerate}
 \end{enumerate}
 
-After experimenting with different setups, we discovered that the best way to distribute weights for time points in the time series is to apply a Gaussian probability density function centered around the time point of interest with variance equal to the total number of time points. This finding will be discussed in more detail in the Results section.\\
+The addition of the Gaussian density variance parameter V gives the user the extra freedom to customize the desired level of resolution for correlation calculation. If a large variance is chosen, the influence of neighboring time points on the calculation of functional connectivity at each time point is increased, thereby adding smoothness and stability to the resulting functional connectivity time sequence and providing a more accurate representation of the general trend. But if a small variance is chose, most of the weight will be placed on the time point of interest and its immediate neighbors, and so the resulting functional connectivity time sequence will have more emphasis on local accuracy. After experimenting with different setups, we discovered that the best way to distribute weights for time points in the time series is to apply a Gaussian probability density function centered around the time point of interest with variance equal to the minimum between the total number of time points and 1000. This finding will be discussed in more detail in the Results section.
 
-In contrast to the sliding window approach which is widely considered as the golden standard for fRMI dynamic correlation calculation, the TimeCorr approach is able to more accurately retrieve the temporal correlation at each time point without loss of important data due to limitations from using time frames. This advantage allows us to "level up" the voxel activation matrix many times and calculate correlation at higher orders while maintaining information at all time points.\\
+In contrast to the sliding window method, which is widely considered to be the golden standard for fMRI functional connectivity calculation, the TimeCorr approach is able to more accurately retrieve the temporal correlation at each time point without loss of important data. This advantage makes it possible to "level up" to higher order functional connectivities---progressively finding the correlation of correlations---and explore dynamics and patterns heretofore untouched. We will go into more detail about the "level up" process and high order functional connectivity in the "Leveling Up" section.
 
-\subsection{Inter-Subject Connectivity using TimeCorr}
-The ISFC is a proces through which we find the stimulus-dependent activations in our fMRI dataset by cross referencing and averaging data from multiple subjects.\\
+\subsection{Inter-Subject Functional Correlations using TimeCorr}
+
+The Inter-Subject Functional Correlations (ISFC) is a process of calculating functional connectivity between brain regions of different subjects. The patterns recovered by ISFC is analogous to single subject functional connectivity (which reflect the correlational structure across brain regions within an individual's
+brain), but they should reflect only activity that is specifically stimulus-driven. For every subject, we compare its brain activations time sequence $a_i$ with the average activations of all other subjects $a_{-i}$. Through the process of averaging activations of multiple subject, we dampen the effect of noise and enhance stimulus-dependent activations in $a_{-i}$. Therefore, when we calculate the functional connectivity matrix between subject activation $a_i$ and the average response from the rest of the participants $a_{-i}$, the functional connectivity we calculate are more likely to reflect activities that are stimulus-driven.
+
+Furthermore, after we obtain the functional connectivity matrix between each subject and the average of their counterparts, we use Fisher Z-transformation to average the results from all the subjects. In addition to the noise-dampening and stimulus-enhancing effects that comes with averaging, we are also able to gain an unbiased view of the overall connectivity pattern across all subjects within our analysis. Fisher Z-transformation is applied in the averaging process as a means to stabilize and reduce approximation variance to return a less biased result than from directly averaging correlations.
+
+\large{\textbf{Formal Definition}}
+
+\normalsize
+Given a fMRI dataset of $S$ subjects, each with T time points and N brain regions, to apply TimeCorr ISFC:
 \begin{enumerate}
-\item For each subject s, we find the average activation of all other subjects:
+\item Determine the desired temporal resolution for calculation and select $\sigma$, the Gaussian density function variance for TimeCorr coefficients generation.
+\item For each subject s,
+\begin{enumerate}
+\item Find the average activation of all other subjects:
 \begin{align*}
 O_s=\frac{\sum_{i\neq s}^N S_i}{N-1}
 \end{align*}
 where $S_i$ represents the activation matrix for subject $i$ and $N$ represents the total number of subjects.
-\item Find the correlation matrices between the voxel activations for each subject $S_i$ and the average voxel activations of all other subjects $O_{i}$ using the TimeCorr method with variance $\sigma$. To find the correlation between voxel activation $S^i_t$ of subject $S$ for voxel $i$ at time $t$ and voxel activation $O^j_t$ of the average of other subjects for voxel $j$ at time points $t$ is obtained through the following equation:
+\item Find the functional connectivity between the brain activations $S$ for subject $s$ and the average brain activations of all other subjects $O$ using TimeCorr ISFC with variance $\sigma$. The correlation between $S^i_t$---activation of brain region i for subject $s$ at time $t$---and $O^j_t$---average brain activation of brain region $j$ of other subjects at time points $t$---is obtained through the following equation:
 \begin{align*}
 C(S^i_t,O^j_t) = \frac{1}{Z}\frac{\sum_{l=0}^T (S_l^i - \bar{S^i_t})\cdot(O^j_l - \bar{O^j_t})\cdot \mathcal{N}(l|t,\sigma)}{\sigma_{S_t^i} \cdot \sigma_{O_t^j}}
 \end{align*}
@@ -109,11 +119,13 @@ Z &= \sum_{l=0}^T \mathcal{N}(l|t,\sigma)\\
 \sigma_{S_t^i} &=\sqrt{ \frac{1}{Z}\sum_{l=0}^T (S_l^i-\bar{S_t^i})^2 \cdot \mathcal{N}(l|t,\sigma)}\\
 \sigma_{O_t^i} &=\sqrt{ \frac{1}{Z}\sum_{l=0}^T (O_l^i-\bar{O_t^i})^2 \cdot \mathcal{N}(l|t,\sigma)}\\
 \end{align*}
+\item Repeat the above process for every pair of brain regions, for every time point.
+\end{enumerate}
 \item Apply Fisher Z-transformation to every element $r$ of the correlation matrices for each subject at each time points to obtain the corresponding Z-correlation matrices:
 \begin{align*}
 z = \frac{1}{2}\ln(\frac{1+r}{1-r})
 \end{align*}
-\item Average the Z-correlation matrices $Z_i$ acros all subjects:
+\item Average the Z-correlation matrices $Z_i$ across all subjects:
 \begin{align*}
 S_Z = \frac{1}{N}\sum^N_{i=1}Z_i
 \end{align*}
@@ -121,23 +133,59 @@ S_Z = \frac{1}{N}\sum^N_{i=1}Z_i
 \begin{align*}
 ISFC = \frac{\exp(S_Z+S_Z^T)-1}{\exp(S_Z+S_Z^T)+1}
 \end{align*}
+\item Convert the correlation matrix at every time point to its inverse squareform format, and output a $T$ by $(V^2-V)/2$ dimensional matrix containing the average functional connectivity of all subjects in the dataset, where $T$ and $V$ represent the time length and brain regions count of the dataset, respectively.
 \end{enumerate}
 
 \subsection{Multi-Subject TimeCorr Level-Up}
-Add justification for using PCA\\
+The multi-subject TimeCorr Level-Up process utilizes the functionalities of the single-subject TimeCorr method to extract high-order brain dynamics patterns from brain fMRI data. Due to the data-losing flaw of the sliding window method, research related to functional connectivity heretofore have been largely limited to analysis on raw fMRI activations and first level functional connectivity. However, with the availability of TimeCorr, we are able to repeatedly find higher order functional connectivity of an fMRI dataset without fear of losing data with each "level up". This advantage allows us to explore higher-order dynamic patterns within the brain that was previously impossible to access.
 
-The multi-subject TimeCorr Level-Up process utilizes the functionalities of the single-subject TimeCorr method to extract high-order brain dynamics patterns from brain activation data. Given a brain activation or activation correlation matrix at level $l$ of dimensions S subject, V voxels and T time points, the Level-Up function\\
+The concept of "leveling up" involves repeatedly finding the correlation of correlations of brain activity. Given a brain fRMI dataset, we designate the raw activations as level 0 and the functional connectivity (correlation structure) of the activations as level 1, the result of "leveling up" from level 0 (here "level" and "order" are interchangeable). Hereafter, given a matrix of functional connectivity of level $n$, we can apply the TimeCorr Level-Up method to find the correlation structure of the data at level $n$ to obtain functional connectivity at level $n+1$.
+
+In addition to effectively retaining all relevant data, the Multi-Subject TimeCorr Level-Up method also presents a scalable solution to large datasets. Normally, for an input dataset of $V$ voxels (brain regions), the first order functional connectivity would occupy $V^2$ space and every additional level of functional connectivity would involve an exponential increase in storage requirement. In order to circumvent this problem, the Multi-Subject TimeCorr Level-Up method first finds the inverse square-form (vectorized array containing the non-diagonal elements of a square matrix) of the correlation matrices for every time point in the "level up" output, and then uses PCA to further reduce the result to a matrix of $T$ by $V$ dimensions, where $T$ and $V$ represent the time length and voxel count of the input dataset. This solution ensures all orders of functional connectivity derived from the same dataset will have the same dimensions. In addition, the application of PCA further guarantees that only the most principle components of each functional connectivity matrix is retained for further analysis.
+
+\large{\textbf{Formal Definition}}
+
+\normalsize
+Given a brain activation or activation correlation matrix at level $l$ of dimensions S subject, V brain regions and T time points, the Level-Up function
+
 \begin{enumerate}
-\item Applies single-subject TimeCorr on the data matrix for each subject to obtain correlations matrix\\
-\item Concatenate the correlations matrix for each subject from the previous step together along the voxels dimension into a single matrix of dimesions $SVxT$\\
-\item Apply PCA on the concatenated matrix from the previous step to obtain a reduced representation of the correlation matrix\\
-\item Separate the reduced correlation matrix from the previous step into data for each subject to obtain a 3-D matrix of size SxVxT
-\item Repeat the above process on the output to level up again
-\end{enumerate}
-Intuitively, every time the multi-subject TimeCorr Level-Up function is applied on a dataset, whether it's an activations matrix or a correlation matrix, the dynamic correlations matrix of the dataset is obtained. Using this process, we are not only able to calculate the correlation of brain activations, but also the correlation of the correlation of brain activations, etc. \\
-Another function of the multi-subject TimeCorr Level-Up function that makes it standout from traditional methods is its application of the single-subject TimeCorr method in calculating dynamic correlations. Traditional methods use the sliding-window approach and lose significant portion of the data with each level, and thus can only level up a limited number of iterations. In contrast, because the single-subject TimeCorr method is able to retain all information of the original dataset after each application, it theoretically has the capability to level up a dataset infinite times. This advantage allows us to explore higher-order dynamic patterns within the brain that was previously impossible to access.\\
+\item Applies single-subject TimeCorr on the data matrix for each subject to obtain correlations matrix
 
-\subsection{Results}
+\item Concatenate the correlations matrix for each subject from the previous step together along the first dimension into a single matrix of dimensions $(S*V)xT$
+
+\item Apply PCA on the concatenated matrix from the previous step to obtain a reduced representation of the correlation matrix
+
+\item Separate the reduced correlation matrix from the previous step into data for each subject to obtain a 3-D matrix of size SxVxT
+
+\item Repeat the above process on the output to level up again
+
+\end{enumerate}
+
+\subsection{Decoding Analysis}
+Decoding Analysis is a process through which we find the stimulus-dependent activations in our fMRI dataset by cross referencing data from multiple subjects.
+
+When the correlation between the same time points in $a_i$ and $a_{-i}$ is high, then it indicates that the subject's brain activities demonstrates very high similarity with the brain activities of all other subjects at that time point. When the brain activities of multiple subjects display high similarity for certain time points in their brain activations time sequence, then intuitively there's a high probability that their brain responses for those time points are uniformly caused by their common stimulus.
+
+\large{\textbf{Formal Definition}}
+
+\normalsize
+Given a multi-subject dataset containing $S$ subjects, each possessing $T$ time points and $V$ voxels, to conduct Decoding Analysis:
+\begin{enumerate}
+\item Select a Gaussian density variance V for TimeCorr coefficient generation.
+\item For n repetitions:
+\begin{enumerate}
+\item Randomly divide the subjects into two equal groups.
+\item Calculate Inter-Subject Functional Connectivity (ISFC) for each group using TimeCorr. The resulting ISFC matrices are labelled $I_1$ and $I_2$.
+\item Calculate time-point-wise correlation between functional connectivity at each time point in $I_1$ and functional connectivity at each time point in $I_2$, resulting in a $T$ by $T$ correlation matrix.
+\item A time point in $I_1$ is correctly decoded if the time point of highest correlation in $I_2$ is the same time point, and vice versa for $I_2$.
+\item Count and record the number of time points that were correctly decoded for $I_1$ and $I_2$.
+\end{enumerate}
+\item Sum the total number of time points correctly decoded for $I_1$ and $I_2$ across all repetitions, and find the average through dividing by the product between the repetition count and two times the time point count (to account for both $I_1$ and $I_2$). The result is the decoding accuracy output of the multi-subject dataset.
+\end{enumerate}
+
+\subsection{High-Order Brain Dynamics}
+
+\section{Results}
 \begin{enumerate}
 \item Synthetic dataset generation
 \item Synthetic dataset testing
@@ -150,7 +198,8 @@ Another function of the multi-subject TimeCorr Level-Up function that makes it s
 \end{enumerate}
 \item Results on the Pieman dataset
 \begin{enumerate}
-\item See Jeremy's paper for reference on order and structure of this section\\
+\item See Jeremy's paper for reference on order and structure of this section
+
 \item Pieman Intact
 \end{enumerate}
 \item Results on Sherlock dataset
